--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -11,6 +11,9 @@ jobs:
     permissions:
       contents: read
       statuses: read
+    outputs:
+      tags: ${{ steps.metadata.outputs.tags }}
+      labels: ${{ steps.metadata.outputs.labels }}
 
     steps:
       - uses: actions/checkout@v4
@@ -66,7 +69,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ fromJSON(steps.metadata.outputs.json).tags[0] }}
+          image-ref: ghcr.io/${{ github.repository }}:${{ github.sha }}
           format: "sarif"
           output: "trivy-results.sarif"
           severity: "CRITICAL,HIGH"
