--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -9,8 +9,10 @@ jobs:
     name: App Build
     runs-on: ubuntu-latest
     permissions:
+      packages: write
       contents: read
       statuses: read
+      security-events: write
 
     steps:
       - uses: actions/checkout@v4
@@ -52,21 +54,10 @@ jobs:
             local-scan:latest
             ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
-
-  container-scan:
-    name: Run Trivy Security Scan
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: read
-      statuses: read
-      security-events: write
-
-    steps:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ fromJSON(steps.metadata.outputs.json).tags[0] }}
+          image-ref: ghcr.io/${{ github.repository }}:${{ github.sha }}
           format: "sarif"
           output: "trivy-results.sarif"
           severity: "CRITICAL,HIGH"
@@ -78,16 +69,6 @@ jobs:
         with:
           sarif_file: "trivy-results.sarif"
 
-  publish:
-    name: Publish image to GHCR (On scan Success)
-    needs: [build, container-scan]
-    permissions:
-      packages: write
-      contents: read
-      statuses: read
-    runs-on: ubuntu-latest
-
-    steps:
       - name: Push Docker image (only if scan passes)
         if: success() # Only runs if all previous steps succeeded
         uses: docker/build-push-action@v6
