--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -1,8 +1,7 @@
 name: Release on Version
 on:
   push:
-    tags:
-      - "v*"
+    branches: [master]
 
 jobs:
   build:
@@ -65,6 +64,25 @@ jobs:
           output: "trivy-results.sarif"
           severity: "CRITICAL,HIGH"
           exit-code: "1" # Fail the step if vulnerabilities are found
+
+      - name: Run Trivy vulnerability scanner (Artifcat)
+        if: always()
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: local-scan:latest
+          format: "template"
+          template: "@$HOME/.local/bin/trivy-bin/contrib/html.tpl"
+          output: "trivy-results.html"
+          severity: "CRITICAL,HIGH"
+          exit-code: "1" # Fail the step if vulnerabilities are found
+
+      - name: Upload Trivy reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-report
+          path: |
+            trivy-report.html
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
