--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -4,6 +4,66 @@ on:
     branches: [master]
 
 jobs:
+  # Step 1:
+  depcheck:
+    name: Check Dependencies
+    runs-on: ubuntu-latest
+    steps:
+      - name: Depcheck
+        uses: dependency-check/Dependency-Check_Action@main
+        id: Depcheck
+        with:
+          project: ${{ github.repository }}
+          path: "./juice-shop-master/"
+          format: "HTML"
+          args: >
+            --failOnCVSS 7
+            --enableRetired
+      - name: Upload Test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: Depcheck report
+          path: ${{github.workspace}}/reports
+
+  # Step 4: gitleaks
+  scan:
+    name: gitleaks
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # Step 5: Semgrep
+  semgrep:
+    runs-on: ubuntu-latest
+    container:
+      image: semgrep/semgrep
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run Semgrep CE (Community)
+        run: |
+          semgrep scan --sarif --output=semgrep-results.sarif
+          semgrep scan --json --output=semgrep-results.json
+
+      - name: Upload Semgrep SARIF results to Security tab
+        uses: github/codeql-action/upload-sarif@v4
+        if: always()
+        with:
+          sarif_file: semgrep-results.sarif
+
+      - name: Upload Semgrep results as artifacts
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: semgrep-results
+          path: |
+            semgrep-results.json
+
   build:
     name: App Build
     runs-on: ubuntu-latest
@@ -56,24 +116,6 @@ jobs:
       - name: Test Docker Image Cache
         run: |
           docker images
-      # Step 1: SCA
-      - name: Depcheck
-        uses: dependency-check/Dependency-Check_Action@main
-        id: Depcheck
-        with:
-          project: ${{ github.repository }}
-          path: "./juice-shop-master/"
-          format: "HTML"
-          args: >
-            --failOnCVSS 7
-            --enableRetired
-
-      - name: Upload Test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Depcheck report
-          path: ${{github.workspace}}/reports
 
       # Step 5: Trivy
       - name: Run Trivy vulnerability scanner
@@ -110,6 +152,30 @@ jobs:
         if: always() # Always upload results even if Trivy scan fails
         with:
           sarif_file: "trivy-results.sarif"
+
+      - name: Start Docker Container
+        if: always()
+        run: |
+          docker run -d --name testing-container -p 127.0.0.1:3000:3000 local-scan:latest
+          # Wait for application to start
+          echo "Waiting for application to start..."
+          for i in {1..30}; do
+            if curl -f http://localhost:3000 >/dev/null 2>&1; then
+              echo "Application is ready!"
+              break
+            fi
+            echo "Attempt $i: Application not ready yet..."
+            sleep 5
+          done
+
+      - name: ZAP Scan
+        if: always()
+        uses: zaproxy/action-full-scan@v0.12.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: "ghcr.io/zaproxy/zaproxy:stable"
+          target: "http://localhost:3000"
+          cmd_options: "-a"
 
       - name: Push Docker image (only if scan passes)
         if: success() # Only runs if all previous steps succeeded
