--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -6,6 +6,12 @@ on:
 jobs:
   # Step 1:
   depcheck:
+    permissions:
+      packages: write
+      contents: read
+      statuses: read
+      security-events: write
+      issues: write
     name: Check Dependencies
     runs-on: ubuntu-latest
     steps:
@@ -20,6 +26,7 @@ jobs:
           args: >
             --failOnCVSS 7
             --enableRetired
+            --exclude test/files/*
       - name: Upload Test results
         if: always()
         uses: actions/upload-artifact@v4
@@ -29,6 +36,11 @@ jobs:
 
   # Step 4: gitleaks
   scan:
+    permissions:
+      packages: write
+      contents: read
+      statuses: read
+      security-events: write
     name: gitleaks
     runs-on: ubuntu-latest
     steps:
@@ -41,6 +53,11 @@ jobs:
 
   # Step 5: Semgrep
   semgrep:
+    permissions:
+      packages: write
+      contents: read
+      statuses: read
+      security-events: write
     runs-on: ubuntu-latest
     container:
       image: semgrep/semgrep
@@ -179,6 +196,7 @@ jobs:
           docker_name: "ghcr.io/zaproxy/zaproxy:stable"
           target: "http://localhost:3000"
           cmd_options: "-a"
+          issue_title: "[ZAP SCAN] ${{ github.sha }}"
 
       - name: Push Docker image (only if scan passes)
         if: success() # Only runs if all previous steps succeeded
