--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -22,11 +22,16 @@ jobs:
         with:
           project: ${{ github.repository }}
           path: "./juice-shop-master/"
-          format: "HTML"
+          format: "SARIF"
           args: >
             --failOnCVSS 7
             --enableRetired
             --exclude test/files/*
+      - name: Upload Depcheck SARIF results to Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: ${{github.workspace}}/reports/dependency-check-report.sarif
       - name: Upload Test results
         if: always()
         uses: actions/upload-artifact@v4
@@ -47,9 +52,18 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - uses: gitleaks/gitleaks-action@v2
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: GitLeaks Run
+        run: |
+          curl -sSfL https://github.com/gitleaks/gitleaks/releases/download/v8.24.3/gitleaks_8.24.3_linux_x64.tar.gz | tar -xz
+          ./gitleaks detect --redact -v --exit-code=2 --report-format=sarif --report-path=results.sarif --log-level=debug
+      - name: Upload GitLeaks SARIF results to Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: ./results.sarif
 
   # Step 5: Semgrep
   semgrep:
