--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -16,6 +16,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
+          # cache: "npm"
+      - name: Install dependencies
+        run: |
+          cd juice-shop-master && npm install --no-audit --no-fund --legacy-peer-deps --package-lock
+          cd frontend && npm install --no-audit --no-fund --legacy-peer-deps --package-lock
       - name: Depcheck
         uses: dependency-check/Dependency-Check_Action@main
         id: Depcheck
