--- a/juice-shop-master/package.json
+++ b/juice-shop-master/package.json
@@ -132,7 +132,7 @@
     "ethers": "^6.13.2",
     "express": "^4.21.0",
     "express-ipfilter": "^1.3.2",
-    "express-jwt": "0.1.3",
+    "express-jwt": "^8.5.1",
     "express-rate-limit": "^7.5.0",
     "express-robots-txt": "^0.4.1",
     "express-security.txt": "^2.0.0",
@@ -186,6 +186,9 @@
     "winston": "^3.16.0",
     "yaml-schema-validator": "^1.2.3",
     "z85": "^0.0.2"
+  },
+  "overrides": {
+    "vm2": "^3.9.19"
   },
   "devDependencies": {
     "@cyclonedx/cyclonedx-npm": "^2.0.0||^3.0.0",
