--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -170,26 +170,7 @@ jobs:
           format: "sarif"
           output: "trivy-results.sarif"
           severity: "CRITICAL,HIGH"
-          exit-code: "1" # Fail the step if vulnerabilities are found
-
-      - name: Run Trivy vulnerability scanner (Artifcat)
-        if: always()
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: local-scan:latest
-          format: "template"
-          template: "@$HOME/.local/bin/trivy-bin/contrib/html.tpl"
-          output: "trivy-results.html"
-          severity: "CRITICAL,HIGH"
-          exit-code: "1" # Fail the step if vulnerabilities are found
-
-      - name: Upload Trivy reports
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-report
-          path: |
-            trivy-results.html
+          exit-code: "0"
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
