--- a/juice-shop-master/package.json
+++ b/juice-shop-master/package.json
@@ -166,7 +166,7 @@
     "notevil": "^1.3.3",
     "on-finished": "^2.3.0",
     "otplib": "^12.0.1",
-    "pdfkit": "^0.11.0",
+    "pdfkit": "^0.17.1",
     "portscanner": "^2.2.0",
     "prom-client": "^14.2.0",
     "pug": "^3.0.3",
@@ -188,7 +188,8 @@
     "z85": "^0.0.2"
   },
   "overrides": {
-    "vm2": "^3.9.19"
+    "vm2": "^3.9.19",
+    "socket.io-parser": "^4.2.3"
   },
   "devDependencies": {
     "@cyclonedx/cyclonedx-npm": "^2.0.0||^3.0.0",
